name:                Blog
version:             0.0.0.0
--author:              Maurizio Crocci
--maintainer:          mbcrocci@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is: Main.hs
  ghc-options: -threaded -O2
  build-depends:
    base
    , simple >= 0.8.0
    , wai
    , wai-extra
    , warp
    , aeson
    , directory
    , filepath
    , http-types
    , transformers
    , simple >= 0.7.0
    , wai
    , wai-extra
    , warp
    , bytestring

